--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,6 @@ h1 {
 	font-weight: bold;
 }
 
-/******* Article Styling and Everything inside the Article *******/
 article {
 	padding-top: 10px;
 }
@@ -43,13 +42,12 @@ h2 {
 	margin: 0 0 12px 0;
 }
 
-/* Paragraphs appended to the page */
 .today {
 	color: rgb(241, 239, 239);
 	font-size: 24px;
 	padding: 0 0 10px 15px;
 }
-/* Special fomatting for the uvIdex */
+
 .uv {
 	display: inline-block;
 }
@@ -77,7 +75,6 @@ h2 {
 	background-color: green;
 }
 
-/******* Styling of everything below the Article *******/
 
 h3 {
 	margin: 60px 0 40px 0;
@@ -88,13 +85,12 @@ h3 {
 	text-align: left;
 	color: snow;
 }
-/* Forcast Div appended to the page */
+
 #fiveDayForecast {
 	text-align: left;
 	height: 100%;
 }
 
-/* All the blocks appended to the #fiveDayForecast Div */
 .fiveDay {
 	display: inline-block;
 	text-align: center;
@@ -123,7 +119,7 @@ h3 {
 	margin-bottom: 4px;
 }
 
-/******* Styling of everything in the Aside Section *******/
+
 aside {
 	background: transparent;
 	width: 340px;
@@ -159,7 +155,7 @@ button {
 #historySection {
 	text-align: center;
 }
-/* Search History divs prepended to the #historySection Div. */
+
 .searches {
 	width: 180px;
 	height: 40px;
@@ -178,7 +174,7 @@ button {
 .searches:hover {
 	cursor: pointer;
 }
-/* Clear Button */
+
 .clear {
 	width: 180px;
 	height: 40px;
@@ -192,9 +188,8 @@ button {
 	text-align: center;
 }
 
-/* * Special styling for screens under 1600px * */
+/* * special styling for screens under 1600px * */
 @media only screen and (max-width: 1600px) {
-	/* Top to bottom */
 	.container-fluid {
 		padding: 10px 0 0 10px;
 	}
@@ -205,7 +200,6 @@ button {
 		padding-top: 20px;
 		font-size: 44px;
 	}
-	/* Inside Article */
 	article {
 		padding-left: 10px;
 	}
@@ -216,11 +210,9 @@ button {
 	.mainIcon {
 		width: 90px;
 	}
-	/* Below Article */
 	h3 {
 		margin: 20px 0;
 	}
-	/* Blocks appened to #fiveDayForecast div */
 	.fiveDay {
 		height: 180px;
 		width: 160px;
@@ -232,23 +224,19 @@ button {
 	.days {
 		font-size: 18px;
 	}
-	/* Inside Aside */
 	h4 {
 		font-size: 20px;
 	}
 }
 
-/******* Special styling for screens under 1200px *******/
+/******* special styling for screens under 1200px *******/
 @media only screen and (max-width: 1200px) {
-	/* Top to bottom */
-	/* Inside Article */
 	h2 {
 		font-size: 28px;
 	}
 	.today {
 		font-size: 22px;
 	}
-	/* Blocks appended to #fiveDayForecast */
 	.fiveDay {
 		height: 155px;
 		width: 135px;
@@ -268,29 +256,24 @@ button {
 	}
 }
 
-/******* Special styling for screens under 800px *******/
+/******* special styling for screens under 800px *******/
 @media only screen and (max-width: 800px) {
-	/* Top to bottom */
 	.container-fluid {
 		padding-left: 40px;
 	}
-	/* Inside Article */
 	article {
 		text-align: center;
 	}
 	h2 {
 		padding-left: 70px;
 	}
-	/* Below Article */
 	h3 {
 		margin: 30px 0;
 		text-align: center;
 	}
-	/* Forecast Div appended to the page. */
 	#fiveDayForecast {
 		text-align: center;
 	}
-	/* Inside Aside */
 	h4 {
 		font-size: 20px;
 	}
@@ -307,9 +290,8 @@ button {
 		font-size: 14px;
 	}
 }
-/******* Special styling for screens under 420px *******/
+/******* special styling for screens under 420px *******/
 @media only screen and (max-width: 420px) {
-	/* Top to bottom */
 	body {
 		background-size: cover;
 		background-repeat: no-repeat;
@@ -321,7 +303,6 @@ button {
 	h1 {
 		font-size: 38px;
 	}
-	/* Inside Article */
 	h2 {
 		margin-left: 20px;
 		padding-left: 0px;
@@ -330,15 +311,12 @@ button {
 	.today {
 		padding-left: 0px;
 	}
-	/* Below Article */
 	h3 {
 		margin: 40px 0;
 	}
-	/* Forecast Div appended to the page. */
 	#fiveDayForecast {
 		margin-left: 20px;
 	}
-	/* Inside Aside */
 	h4,
 	.searches,
 	.clear {
@@ -349,9 +327,8 @@ button {
 		margin-left: 106px;
 	}
 }
-/******* Special styling for screens under 375px *******/
+/******* special styling for screens under 375px *******/
 @media only screen and (max-width: 375px) {
-	/* Top to bottom */
 	.container-fluid {
 		padding-left: 20px;
 	}
@@ -359,23 +336,19 @@ button {
 		font-size: 36px;
 		padding: 30px 0 0 20px;
 	}
-	/* Inside Article */
 	h2 {
 		font-size: 22px;
 		margin-left: 20px;
 	}
-	/* Below Article */
 	h3 {
 		padding-left: 0px;
 	}
-	/* Forecast Div appended to the page. */
 	#fiveDayForecast {
 		margin-left: 20px;
 	}
 	.fiveDay {
 		margin-right: 20px;
 	}
-	/* Inside Aside */
 	h4,
 	.searches,
 	.clear {
